# stm32f3-rust-template

./: .gitignore  Cargo.toml  memory.x
.cargo/: config
src/: main.rs
